adds checkout to steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
     machine:
           image: ubuntu-2004:202010-01
     steps:
+      - checkout
       - run: 
           name: pytest
           command: make test-all
