--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,32 @@
-version: 2.1
+# version: 2.1
 
-orbs: 
-  discord: antonioned/discord@0.1.0
+# orbs: 
+#   discord: antonioned/discord@0.1.0
 
-jobs:
-  test:
-    environment:
-      CUDA_VER: 11.3.1
-    machine:
-          image: ubuntu-2004:202010-01
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: make install-dependencies
-      - run:
-          name: Pull docker-stacks
-          command: git submodule update --init --recursive
-      - run: 
-          name: Test all containers
-          command: make test-all
-      # - discord/status:
-      #     fail_only: false
-      #     failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
-      #     webhook: $DISCORD_WEBHOOK
-      #     success_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** succeeded!"
+# jobs:
+#   test:
+#     environment:
+#       CUDA_VER: 11.3.1
+#     machine:
+#           image: ubuntu-2004:202010-01
+#     steps:
+#       - checkout
+#       - run:
+#           name: Install dependencies
+#           command: make install-dependencies
+#       - run:
+#           name: Pull docker-stacks
+#           command: git submodule update --init --recursive
+#       - run: 
+#           name: Test all containers
+#           command: make test-all
+#       # - discord/status:
+#       #     fail_only: false
+#       #     failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
+#       #     webhook: $DISCORD_WEBHOOK
+#       #     success_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** succeeded!"
 
-workflows:
-  test_all_containers:
-    jobs: 
-      - test
+# workflows:
+#   test_all_containers:
+#     jobs: 
+#       - test
