--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,5 @@ services:
       - 8888:8888
     environment:
       - JUPYTER_ENABLE_LAB=1
+    volumes:
+      - /home/dwalker/Development/personal_notebooks:/home/jovyan/notebooks
