--- a/.github/workflows/nightly_build.yaml
+++ b/.github/workflows/nightly_build.yaml
@@ -2,7 +2,8 @@ name: nightly-build
 
 on:
   schedule:
-  - cron: '0 0 * * *'       # run at 12AM UTC
+  - cron: '0 0 * * *'
+  push:     # run at 12AM UTC
 
 jobs:
   Build:
