--- a/.github/workflows/nightly_build.yaml
+++ b/.github/workflows/nightly_build.yaml
@@ -19,7 +19,7 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: Pull From Docker-Stacks
         run: | 
-          git pull --recurse-submodules
+          git submodule init
           git submodule update --remote --recursive
       - name: Format Python Code
         run: black --verbose --exclude=docker-stacks .
