--- a/.github/workflows/nightly_build.yaml
+++ b/.github/workflows/nightly_build.yaml
@@ -11,16 +11,14 @@ jobs:
     steps:
       - name: Clone Repository
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
       - name: Install Python Dependencies
         run: pip3 install -r requirements.txt
-      - name: Pull From Docker-Stacks
-        run: | 
-          git submodule init
-          git submodule update --remote --recursive
       - name: Format Python Code
         run: black --verbose --exclude=docker-stacks .
       - name: Build Containers
