--- a/.github/workflows/nightly_build.yaml
+++ b/.github/workflows/nightly_build.yaml
@@ -2,8 +2,8 @@ name: nightly-build
 
 on:
   schedule:
-  - cron: '0 0 * * *'
-  push:     # run at 12AM UTC
+  - cron: '0 17 * * *'
+  push:  
 
 jobs:
   Build:
@@ -25,6 +25,10 @@ jobs:
         run: make gpu-build
       - name: Tag Containers
         run: make tag-all
+      - name: Execute Docker-Stacks Tests
+        run: python tests/exec_docker_stacks_tests.py
+      - name: Test For Cuda
+        run: pytest -x tests/cuda_test.py
       - name: Log Into Container Registry
         run: docker login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push To Container Registry
