--- a/labs/JAX/Dockerfile.JAX
+++ b/labs/JAX/Dockerfile.JAX
@@ -30,7 +30,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Install Tensorflow
-RUN mamba install --quiet --yes \
+RUN mamba install --yes \
     'tensorflow' && \
     mamba clean --all -f -y && \
     fix-permissions "${CONDA_DIR}" && \
