--- a/.github/workflows/nightly_build.yaml
+++ b/.github/workflows/nightly_build.yaml
@@ -30,9 +30,9 @@ jobs:
           python-version: '4.9'
       - name: Python Setup Failure
         if: ${{ failure() }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: gh run view --job checkout --log
+        run: |
+          LOGS=$(gh run view --job python-setup --log)
+          curl -X POST --data '{"content": $LOGS}' --header "Content-Type:application/json" $DISCORD_WEBHOOK
 
       - name: Install Python Dependencies
         run: pip3 install -r requirements.txt
