--- a/.github/workflows/main_pipeline.yaml
+++ b/.github/workflows/main_pipeline.yaml
@@ -2,21 +2,20 @@ name: nightly-build
 
 on:
   schedule:
-  - cron: '0 3 * * *'  # 12 AM EST
-  push:  
-
+    - cron: "0 3 * * *" # 12 AM EST
+  push:
+    branches:
+      - "*"
 
 env:
   DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   BUILD_FAILED: 0
 
-
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-
       # Checkout Step
       - name: Clone Repository
         id: checkout
@@ -29,11 +28,10 @@ jobs:
         id: python-setup
         uses: actions/setup-python@v4
         with:
-          python-version: '4.9'
+          python-version: "4.9"
       - name: Python Setup Failure
         if: ${{ failure() }}
         run: BUILD_FAILED=1
-
 
       - name: Install Python Dependencies
         run: pip3 install -r requirements.txt
@@ -56,7 +54,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: 'Build and push complete!'
+          args: "Build and push complete!"
 
   Notify:
     runs-on: ubuntu-latest
